Release 0.9.1: SDK wire format alignment, performance
Consolidate API schema to api.v1.json, complete Java SDK typed surface
(Show/ExplanationNode/LemmaType, BigDecimal, JDK 21, thread-safe Engine),
align NPM TypeScript (RunOptions, Response, RuleResultValue) and Hex Elixir
(canonical error fields, typed struct modules) to canonical wire format.
Remove dead UnitEquivalence variant. Engine evaluation ~10% faster, ~15% less
memory per call, planning up to 20% faster.